--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -24,6 +24,7 @@ dependencies:
   another_flushbar: ^1.12.29
   permission_handler: ^10.2.0
   geolocator: ^9.0.2
+  getwidget: ^2.0.4
 
 dev_dependencies:
   flutter_test:
