--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -25,6 +25,8 @@ dependencies:
   permission_handler: ^10.2.0
   geolocator: ^9.0.2
   getwidget: ^2.0.4
+  hive: ^2.2.3
+  path_provider: ^2.0.12
 
 dev_dependencies:
   flutter_test:
