--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -29,6 +29,7 @@ dependencies:
   path_provider: ^2.0.12
   uuid: ^3.0.7
   flutter_launcher_icons: ^0.11.0
+  intl: ^0.17.0
 
 dev_dependencies:
   flutter_test:
